--- a/todo.txt
+++ b/todo.txt
@@ -23,6 +23,15 @@ sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/too
 그냥 bash쓰려면
 chsh -s /bin/bash
 
+폴더의 권한 확인
+ls -l
+
+파일 / 폴더의 소유자 변경
+sudo chown onlifecoding node_modules
+
+package-lock.json 파일만 생성 / 업데이트
+npm i --package-lock-only
+
 다음으로는 angular앱을 도커에서 돌리기 위해서 node 서버 하나가 필요하다.
 https://medium.com/bb-tutorials-and-thoughts/dockerizing-angular-app-with-nodejs-backend-85e9d332335d
 https://medium.com/bb-tutorials-and-thoughts/how-to-develop-and-build-angular-app-with-nodejs-e24c40444421
@@ -51,6 +60,13 @@ https://kubernetes.io/docs/tasks/configure-pod-container/translate-compose-kuber
 
 이제 해야 할 게...
 앵귤러 컨테이너 개발 설정을 하자.
+
+Angular environment.ts 파일에서 시스템 환경변수 참조하기
+https://medium.com/swlh/environment-variables-in-angular-ionic-8aa1698f2cc5
+
+위 방법으로 환경변수 파일을 생성하도록 별도의 조치가 필요
+
+-----------------------
 
 이렇게 하고 다음으로 배포용 컨테이너 설정까지 하면 일단은 정리.
 
