--- a/todo.txt
+++ b/todo.txt
@@ -74,4 +74,17 @@ https://medium.com/swlh/environment-variables-in-angular-ionic-8aa1698f2cc5
 
 이렇게 하고 다음으로 배포용 컨테이너 설정까지 하면 일단은 정리.
 
+-----------------------
+
+kompose
+https://kompose.io/
+
+kompose convert -f docker-compose-build.yml -o ./k8s.yaml
+
+kubectl apply -f k8s.yaml
+kubectl delete -f k8s.yaml
+
+현재 각 서비스가 ClusterIP 형태로 되어 있는데, 이거는 클러스터안에서만 접근이 가능하다.
+NodePort 형태로 노출을 시켜야 하는데.....
+
 그 다음에 k8s, DAPR로 넘어갑시다... 천천히...
