--- a/todo.txt
+++ b/todo.txt
@@ -98,7 +98,19 @@ https://kubernetes.io/ko/docs/tutorials/kubernetes-basics/expose/expose-intro/
 이거는 아마도 서비스 이름으로 참조해야 되서 그런거 같다.
 그러니까 프론트에서 서버로 보낼 때, localhost:3000이 아니고 admin-lobby-server:3000 이런식으로 보내야 할 듯.
 
-그리고 서버에서도 cors 할 때, admin-lobby-ui 이런식으로 해야 하나...?
+----------------------
+
+자 일단... 날아간건 날아간 거고...
+
+다시 해보는 게,
+1. prod 스테이지에서는 각 서버 Dockerfile에서 ui앱을 빌드해서 넣을 것.
+2. 서버 service 30000, 30001로 설정
+3. 서버의 cors는 http://localhost 로
+4. 각 yaml 파일 이미지 버전 업데이트하고 빌드해서 실행
+
+요거 다음에 다시 해보자.
+git 이거 왜 이러지....-_-;;;
+
 
 이 부분은 좀 더 고민해보자....-_-;;;
 
