--- a/todo.txt
+++ b/todo.txt
@@ -103,6 +103,7 @@ https://kubernetes.io/ko/docs/tutorials/kubernetes-basics/expose/expose-intro/
 자 일단... 날아간건 날아간 거고...
 
 다시 해보는 게,
+0. 0.4 버전 이미지들 한 번 실행해서 package.json 의 script 부분 확인 필요.
 1. prod 스테이지에서는 각 서버 Dockerfile에서 ui앱을 빌드해서 넣을 것.
 2. 서버 service 30000, 30001로 설정
 3. 서버의 cors는 http://localhost 로
