--- a/todo.txt
+++ b/todo.txt
@@ -121,6 +121,12 @@ git fsck --full
 요거 다음에 다시 해보자.
 git 이거 왜 이러지....-_-;;;
 
+------------------------
+
+1. docker-compose-prod.yaml 파일의 이미지 버전 증가
+2. docker-compose -f docker-compose-prod.yaml build
+3. k8s.yaml의 이미지 버전 증가
+4. kubectl apply -f k8s.yaml
 
 이 부분은 좀 더 고민해보자....-_-;;;
 
