--- a/todo.txt
+++ b/todo.txt
@@ -128,6 +128,16 @@ git 이거 왜 이러지....-_-;;;
 3. k8s.yaml의 이미지 버전 증가
 4. kubectl apply -f k8s.yaml
 
-이 부분은 좀 더 고민해보자....-_-;;;
+------------------------
+
+인그레스를 선언한 뒤에, 인그레스 컨트롤러를 설치해야 한다.
+
+nginx ingress controller 설치 가이드
+https://kubernetes.github.io/ingress-nginx/deploy/
+
+Docker Desktop의 경우 아래과 같이
+kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v0.46.0/deploy/static/provider/cloud/deploy.yaml
+
+
 
 그 다음에 k8s, DAPR로 넘어갑시다... 천천히...
