--- a/todo.txt
+++ b/todo.txt
@@ -145,6 +145,12 @@ socket.io가 막히는데...
 아마도 socket.io에서 네임스페이스를 써서 분리를 해야 할까?
 그래야 엔드포인트가 분리될 듯?
 
+아니다... 이거 지금 구성에는 인그레스 적용하는 게 맞지는 않는 거 같다.
+일단 인그레스를 이렇게 할 수 있다는 정도로 여기서 분기 떠서 보관해놓고...
+롤백하자.
+
+------------------------
+
 이 부분 추가로 해보자.
 
 
