--- a/todo.txt
+++ b/todo.txt
@@ -128,6 +128,19 @@ git 이거 왜 이러지....-_-;;;
 3. k8s.yaml의 이미지 버전 증가
 4. kubectl apply -f k8s.yaml
 
-이 부분은 좀 더 고민해보자....-_-;;;
+------------------------
+
+git 커밋 되돌리기
+
+git checkout dapr-k8s
+git reset --hard ba6352b856d4e47ea6969899ad9211956d0cee59
+git push -f origin dapr-k8s
+
+------------------------
+
+인그레스는 현재 프로젝트에 안 맞음
+인그레스는 분기떠서 냅두기
+
+------------------------
 
 그 다음에 k8s, DAPR로 넘어갑시다... 천천히...
